# rust-tsp

./: Cargo.toml  README.md
demo-server/: Cargo.toml  README.md  script.js
demo-server/src/: intermediary.rs  main.rs
docs/src/: start.md  web-interface.md
docs/src/cli/: installation.md  nested.md  routed.md  usage.md
examples/: Cargo.toml  cli-test-direct.sh  cli-test-routed.sh  database.json  test.sh
examples/src/: cli.rs  create-did-web.rs  server.rs
examples/test/: alice.json  bob.json  carol-did.json  carol.json  dave-did.json  dave.json  eve-did.json  eve.json  frank-did.json  frank.json
tsp/: Cargo.toml
tsp-cesr/src/: error.rs  lib.rs  packet.rs
tsp-crypto/: Cargo.toml
tsp-crypto/src/: error.rs  lib.rs  nonconfidential.rs  tsp_hpke.rs
tsp-definitions/: Cargo.toml
tsp-definitions/src/: error.rs  lib.rs
tsp-transport/: Cargo.toml
tsp-transport/src/: error.rs  http.rs  lib.rs  tcp.rs
tsp-vid/: Cargo.toml
tsp-vid/src/: deserialize.rs  error.rs  lib.rs  resolve.rs
tsp-vid/src/resolve/did/: peer.rs  web.rs
tsp/src/: async_store.rs  error.rs  lib.rs  store.rs  test.rs
tsp/src/cesr/: error.rs  mod.rs  packet.rs
tsp/src/crypto/: mod.rs  nonconfidential.rs  tsp_hpke.rs
tsp/src/definitions/: mod.rs
tsp/src/transport/: http.rs  mod.rs  tcp.rs
tsp/src/vid/: deserialize.rs  error.rs  mod.rs  resolve.rs
tsp/src/vid/did/: peer.rs  web.rs
