[workspace]
resolver = "2"
members = [ "tsp", "examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wenjing/rust-tsp"
homepage = "https://github.com/wenjing/rust-tsp"
readme = "./README.md"
description = "Rust implementation of the Trust Spanning Protocol"
publish = false
rust-version = "1.75"

[workspace.dependencies]
# generic
base64ct = { version = "1.6", features = ["alloc", "std"] }
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }
#crypto
ed25519-dalek = { version = "2", features = [ "rand_core", "pkcs8" ] }
hpke = { git = "https://github.com/marlonbaeten/rust-hpke", branch = "keys-by-reference", features = ["alloc", "std"] }
rand = "0.8"
sha2 = { version = "0.10.8" }
# async
async-stream = { version = "0.3"}
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-core = { version = "0.3"}
futures-util = { version = "0.3" }
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots", "stream"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
# resolve
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "json", "stream", "charset", "http2", "macos-system-configuration"] }
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bs58 = "0.5"
# cli
clap = { version = "4.5", features = ["derive"] }
# demo server
axum = { version = "0.7", features = ["ws"] }
