[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
tsp = { path = "../tsp" }
tsp-vid = { path = "../tsp-vid" }
tokio = { workspace = true}
clap = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
