[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[[bin]]
name = "tsp"
path = "src/cli.rs"

[dependencies]
colored = "2"
tsp = { path = "../tsp" }
tsp-vid = { path = "../tsp-vid" }
tsp-cesr = { path = "../tsp-cesr" }
tokio = { workspace = true}
url = { workspace = true}
clap = { workspace = true}
reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64ct = { workspace = true }
