[package]
name = "tsp-definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-cesr = { path = "../tsp-cesr" }
base64ct = { workspace = true }
bs58 ={ workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hpke = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
