[package]
name = "tsp-definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
