[package]
name = "tsp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-definitions = { path = "../tsp-definitions" }
url = { workspace = true }
thiserror = { workspace = true }
# tcp transport
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# http / https transport
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
