[package]
name = "tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
cesr-t = [ ]
default = ["std"]
std = [ ]
strict = [ ]
alloc = [ ]
demo = ["alloc"]

[dependencies]
# generic
url = { workspace = true }
thiserror = { workspace = true }
base64ct = { workspace = true }
# crypto
hpke = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true, features = ["fast", "zeroize", "rand_core"] }
sha2 = { workspace = true }
# async
async-recursion = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# resolve
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 ={ workspace = true }

[dev-dependencies]
serial_test = { version = "3.0" }
