[package]
name = "tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
cesr-t = [ ]
default = ["async"]
strict = [ ]
alloc = [ ]
demo = ["alloc"]
async = [
    "resolve",
    "dep:async-stream",
    "dep:futures",
    "dep:futures-core",
    "dep:futures-util",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-tungstenite",
    "dep:tokio-util",
    "dep:tracing",
    "dep:tracing-subscriber"
]
resolve = [
    "serialize",
    "dep:reqwest"
]
serialize = [
    "dep:serde",
    "dep:serde_json",
    "dep:bs58"
]

[dependencies]
# generic
base64ct = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
# crypto
ed25519-dalek = { workspace = true, features = ["fast", "zeroize", "rand_core"] }
hpke = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
# async
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
# resolve
reqwest = { workspace = true, optional = true }
# serialize
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bs58 ={ workspace = true, optional = true }

[dev-dependencies]
serial_test = { version = "3.0" }
